Fix code scrollbar

--- a/_sass/partials/_layout.scss
+++ b/_sass/partials/_layout.scss
@@ -124,7 +124,8 @@ code {
   white-space: nowrap;
   background: #F1F1F1;
   border: 1px solid #E1E1E1;
-  border-radius: 4px; }
+  border-radius: 4px; 
+  overflow: auto;}
 pre > code {
   display: block;
   padding: 1rem 1.5rem;
